<resources>
    <string name="app_name">Next Day</string>
    <string name="enter_word">ПРОГНОЗИРОВАНИЕ ФОНДОВЫХ РЫНКОВ</string>
    <string name="sign_in">Вход</string>
    <string name="or">или</string>
    <string name="sign_up">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="date">Дата рождения</string>
    <string name="FIO">ФИО</string>
    <string name="registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>