<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="417dp"
        android:layout_height="666dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/enter_backround" />

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="364dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315">

        <Button
            android:id="@+id/button"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:background="#0A5E2A"
            android:backgroundTint="#0A5E2A"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="339dp" />

        <TextView
            android:layout_width="40sp"
            android:layout_height="35sp"
            android:text="@string/or"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:background="#6DAC4F"
            android:backgroundTint="#6DAC4F"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="339dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>